enable eureka client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=order-service
 logging.level.guru=debug
 spring.jackson.property-naming-strategy=SNAKE_CASE
 server.port=8081
