--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
+
+spring.zipkin.baseUrl=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
