--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.artemis.password=simetraehcapa
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 
-spring.zipkin.baseUrl=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+#transfer to config server repo and here we disable zipkin
+#spring.zipkin.baseUrl=http://localhost:9411
+#spring.sleuth.sampler.probability=1.0
+spring.zipkin.enabled=false
