--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 #spring.zipkin.baseUrl=http://localhost:9411
 #spring.sleuth.sampler.probability=1.0
 spring.zipkin.enabled=false
+
+spring.security.user.name=good
+spring.security.user.password=beer
