--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ logging.level.guru=debug
 spring.jackson.property-naming-strategy=SNAKE_CASE
 server.port=8081
 sfg.brewery.beer-service-host=http://localhost:8080
+
+sfg.brewery.beer-service-user=good
+sfg.brewery.beer-service-password=beer
+
 #defaults for this docker image : vromero/active-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
